# agnSED

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
example/: BCs.txt  example.ipynb  z0.0
src/: photometry.py
src/agnSED/: Lgaldust.py  agnSED.py  photometry.py
src/agnSED.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agnSED/data/: save_adaf.pck  save_trunc.pck
test-env/: pyvenv.cfg
