[metadata]
name = agnSED
version = 0.1.0
author = Tong Su
author_email = sutong@bao.ac.cn
description = This package is used to calculated the SED of BH accretion processes, with BH mass and accretion rate as input parameters. Model descriptions could be found on Su et al.2024 (links).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/your-package-name  # Replace with your URL
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
include_package_data = Truey
install_requires =
    numpy>=1.26.4
    scipy==1.10.0
python_requires = >=3.8

[options.package_data]
* = data/*.pck

[options.packages.find]
where = src
